# azure-dagster-infrastructure

./: .gitignore  README.md  pyproject.toml
azure-dagster/: .env.dev  Pulumi.dev.yaml  Pulumi.qa.yaml  Pulumi.yaml  __main__ copy.py  __main__.py
azure-infrastructure/: .env.dev  Pulumi.dev.yaml  Pulumi.yaml  __main__.py  requirements.txt
build-test-push-images/: Dockerfile_dagster  README.md  dagster.yaml  dagster_config_source.yaml  definitions.py  start_dagster.bash  workspace.yaml
dags/: Dockerfile_user_code  README.md  definitions.py  workspace.yaml
dags/code_location_1/: Dockerfile_loc1  __init__.py
dags/code_location_1/assets/: test_assets.py
dags/code_location_2/: Dockerfile_loc2  __init__.py
dags/code_location_2/more_test_assets/: test_assets_2.py
dagster-backend/: dagster.yaml  workspace.yaml
